# libstatsdc

./: .gitignore  .metadata.yml  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  README  configure.ac
.github/: CODEOWNERS
libstatsdc/: Makefile.am  statsdc.c  statsdc.h
src/: Makefile.am  example.c  statsdc.c  statsdc.h
