AC_INIT([libstatsdc], [0.1], [mina.libstatsdc@naguib.ca])

AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile libstatsdc/Makefile src/Makefile])
AC_CONFIG_SRCDIR([libstatsdc/statsdc.h])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC

AC_CHECK_FUNCS([strdup])
AC_FUNC_MALLOC

AM_INIT_AUTOMAKE([-Wall -Werror])
LT_INIT

AC_OUTPUT
